fixed transitions and rotations. final solution for the flickering :)

--- a/app/sass/app.scss
+++ b/app/sass/app.scss
@@ -76,7 +76,7 @@ header {
 		margin-left: -0.9rem;
 		@include triangle(bottom, .9rem, $color-light-gray);
 		@include translateX(0);
-		@include single-transition(transform .2s);
+		@include single-transition(transform, .2s);
 		@include transform-origin(50%);
 	}
 }
@@ -142,7 +142,7 @@ header {
 	overflow: hidden;
 
 	.challenge-wrapper {
-		@include perspective(1000);
+		@include perspective(1500);
 
 		/* fake random */
 		&:nth-child(1) .avatar {
@@ -157,7 +157,7 @@ header {
 		position: relative;
 		margin: 3rem 1.5rem;
 		@include transform-style(preserve-3d);
-		@include single-transition(transform .3s);
+		@include single-transition(transform, .4s);
 
 		&.is-details {
 			@include rotateY(-180deg);
@@ -196,6 +196,12 @@ header {
 			width: 100%;
 			background: #fff;
 			@include backface-visibility(hidden);
+
+			&.face-front {
+				// this ensures the whole face and its content is a render layer.
+				// this avoid inner elems to flicker when rotating.
+				@include rotateY(0);
+			}
 
 			&.face-back {
 				@include rotateY(-180deg);
@@ -276,14 +282,13 @@ header {
 		}
 
 		.actions {
+			position: relative;
 			@include border-bottom-radius();
 			width: 100%;
 			height: 4.5rem;
 			background: $color-medium-gray;
 			font-size: 0;
 			@include backface-visibility(hidden);
-			@include translateZ(0);
-			// this avoid add button to flicker when rotating challenge
 
 			> button {
 				width: 50%;
